2005-07-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* notation.py (Notation.change_duration_log): duration logs of all
	notes.

	* ikebana.py (NotationApplication.tree_selection_changed): new
	function.

	* music.py (ClefEvent.__init__): add 
	(NoteEvent.ly_expression): add 
	(Music.has_children): new method.

	* musictree.py (MusicTreeView.selection_changed): add Tree view of
	music model.

2005-07-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* server.ly: use Completion_heads_engraver
	use version number. 

	* music.py (Music.set_start): use Rationals for lengths.

	* rational.py (Rational.ceil): new class.

	* notation.py (add_start_skip):  new function

2005-07-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ikebana.py (NotationApplication.create_window): add zoom.

	* notationcanvas.py (Notation_toolbar.__init__): multiple rows.

2005-07-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* notationcanvas.py (Notation_toolbar.__init__): new class
	Notation_toolbar: add a row of buttons, flash button when pressed.

2005-07-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* notation.py (talk_to_lilypond): send off lilypond input

2005-07-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ikebana/notationcanvas.py (Notation_canvas.__init__): White
	background.

	* New file.